Fixed using java 16 feature when project is run on java 15.